# OPPO-earbud-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  generate_fixtures.py  oppo_gui.py
include/: EarbudController.hpp
include/oppo/: device.hpp  expected.hpp  itransport.hpp  messages.hpp  protocol.hpp  router.hpp  transport.hpp
qml/: Main.qml
src/: EarbudController.cpp  device.cpp  itransport.cpp  main_cli.cpp  main_gui.cpp  messages.cpp  protocol.cpp  router.cpp  transport.cpp  transport_linux.cpp  transport_mac.mm  transport_win.cpp
tests/: test_cpp_protocol.cpp
